show interests back-end

--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -43,12 +43,15 @@
       </ng-template>
     <br>
     
-    <strong>Intérêts:</strong>
-    <ul>
+     <strong>Intérêts:</strong>
+  <!--<div *ngFor = "let privateinterest in privateinterests "> -->
+      <!-- <ul>
       <li >
-        <!-- {{ role }} -->
+    
       </li>
-    </ul>
+      </ul>  -->
+
+    <!-- </div> -->
   </div>
   
   <ng-template #loggedOut>
