--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -21,8 +21,8 @@
           
           <!--search form-->
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"   name="search" autocomplete="off">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" >Search</button>
+            <input class="form-control mr-sm-2" type="search" [(ngModel)]="searchQuery" placeholder="Search" aria-label="Search"   name="search" autocomplete="off">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="searchItem()">Search</button>
           </form>
     
     
