--- a/frontend/src/app/chat/chat.component.css
+++ b/frontend/src/app/chat/chat.component.css
@@ -1,109 +1,98 @@
-body{
-      background:#eee;    
-  }
-  .chat-list {
-      padding: 0;
-      font-size: .8rem;
-  }
-  
-  .chat-list li {
-      margin-bottom: 10px;
-      overflow: auto;
-      color: #ffffff;
-  }
-  
-  .chat-list .chat-img {
-      float: left;
-      width: 48px;
-  }
-  
-  .chat-list .chat-img img {
-      -webkit-border-radius: 50px;
-      -moz-border-radius: 50px;
-      border-radius: 50px;
-      width: 100%;
-  }
-  
-  .chat-list .chat-message {
-      -webkit-border-radius: 50px;
-      -moz-border-radius: 50px;
-      border-radius: 50px;
-      background: #5a99ee;
-      display: inline-block;
-      padding: 10px 20px;
-      position: relative;
-  }
-  
-  .chat-list .chat-message:before {
-      content: "";
-      position: absolute;
-      top: 15px;
-      width: 0;
-      height: 0;
-  }
-  
-  .chat-list .chat-message h5 {
-      margin: 0 0 5px 0;
-      font-weight: 600;
-      line-height: 100%;
-      font-size: .9rem;
-  }
-  
-  .chat-list .chat-message p {
-      line-height: 18px;
-      margin: 0;
-      padding: 0;
-  }
-  
-  .chat-list .chat-body {
-      margin-left: 20px;
-      float: left;
-      width: 70%;
-  }
-  
-  .chat-list .in .chat-message:before {
-      left: -12px;
-      border-bottom: 20px solid transparent;
-      border-right: 20px solid #5a99ee;
-  }
-  
-  .chat-list .out .chat-img {
-      float: right;
-  }
-  
-  .chat-list .out .chat-body {
-      float: right;
-      margin-right: 20px;
-      text-align: right;
-  }
-  
-  .chat-list .out .chat-message {
-      background: #fc6d4c;
-  }
-  
-  .chat-list .out .chat-message:before {
-      right: -12px;
-      border-bottom: 20px solid transparent;
-      border-left: 20px solid #fc6d4c;
-  }
-  
-  .card .card-header:first-child {
-      -webkit-border-radius: 0.3rem 0.3rem 0 0;
-      -moz-border-radius: 0.3rem 0.3rem 0 0;
-      border-radius: 0.3rem 0.3rem 0 0;
-  }
-  .card .card-header {
-      background: #17202b;
-      border: 0;
-      font-size: 1rem;
-      padding: .65rem 1rem;
-      position: relative;
-      font-weight: 600;
-      color: #ffffff;
-  }
-  
-  .content{
-      margin-top:40px;    
-  }
+
+  .btn-dark{
+    font-family: 'Black Han Sans', sans-serif, cursive;
+    margin: 1.5%;
+}
 
 
+ul{ 
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #edeff2;
+  font-family: "Calibri", "Roboto", sans-serif;
+}
+
+.chat_window {
+  position: absolute;
+  width: calc(100% - 20px);
+  max-width: 800px;
+  height: 500px;
+  border-radius: 10px;
+  background-color: #fff;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+  background-color: #f8f8f8;
+  overflow: hidden;
+}
+
+.top_menu .title {
+  text-align: center;
+  color: #bcbdc0;
+  font-size: 20px;
+}
+
+.bottom_wrapper {
+  position: relative;
+  width: 100%;
+  background-color: #fff;
+  padding: 20px 20px;
+  position: absolute;
+  bottom: 0;
+}
+.bottom_wrapper .message_input_wrapper {
+  display: inline-block;
+  height: 50px;
+  border-radius: 25px;
+  border: 1px solid #bcbdc0;
+  width: calc(100% - 160px);
+  position: relative;
+  padding: 0 20px;
+}
+.bottom_wrapper .message_input_wrapper .message_input {
+  border: none;
+  height: 100%;
+  box-sizing: border-box;
+  width: calc(100% - 40px);
+  position: relative;
+  outline-width: 0;
+  color: gray;
+}
+.bottom_wrapper .send_message {
+  width: 140px;
+  height: 50px;
+  display: inline-block;
+  border-radius: 50px;
+  background-color: #a3d063;
+  border: 2px solid #a3d063;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.2s linear;
+  text-align: center;
+  float: right;
+}
+.bottom_wrapper .send_message:hover {
+  color: #a3d063;
+  background-color: #fff;
+}
+.bottom_wrapper .send_message .text {
+  font-size: 18px;
+  font-weight: 300;
+  display: inline-block;
+  line-height: 48px;
+}
+
+.message_template {
+  display: none;
+}
