--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -78,6 +78,15 @@
                       </div>
                     </div>
                   <hr>
+                        <div class="row">
+                          <div class="col-sm-3">
+                            <h6 class="mb-0">Follower</h6>
+                          </div>
+                          <div class="col-sm-9 text-secondary">
+                            {{ currentUser.first_name}} {{ currentUser.last_name}}
+                          </div>
+                        </div>
+                        <hr>
                 </div>
               </div>    
           </div>
