--- a/frontend/src/app/activity-details/activity-details.component.html
+++ b/frontend/src/app/activity-details/activity-details.component.html
@@ -7,8 +7,8 @@
      <div class="col col-5">
         <h5 class="card-title"><b>Titre: </b>{{ activity.title }}</h5>
         <p class="card-text"><b>Sport: </b>{{ activity.id_category.name }}</p>
-        <p class="card-text"><b>Date de début: </b>{{ activity.start_date}}</p>
-        <p class="card-text"><b>Date de fin: </b>{{ activity.end_date}}</p>
+        <p class="card-text"><b>Date de début: </b>{{ activity.start_date | date: 'dd/MM/yy'}}</p>
+        <p class="card-text"><b>Date de fin: </b>{{ activity.end_date | date: 'dd/MM/yy' }}</p>
         <p class="card-text"><b>Temps: </b>{{ activity.timeEvent}}</p>
         <p class="card-text"><b>Nombre de membres: </b>{{ activity.participants_quantity}}</p>
         <p class="card-text"><b>Adresse: </b>{{ activity.address}}</p>
@@ -18,14 +18,14 @@
           <div *ngIf="this.activity._id === this.participant.id_activity">
             <p class="card-text"><a routerLink="/user-profile/{{ participant.id_user._id }}"> {{ participant.id_user.first_name}} {{ participant.id_user.last_name}}</a></p>
           </div>
-       
-        <p class="card-text"><b>Organisateur: </b><a routerLink="/user-profile/{{ activity.id_host._id }}">{{ activity.id_host.first_name }}  {{ activity.id_host.last_name }}</a></p>
         </div>
+        <p class="card-text"><b>Organisateur: </b><a routerLink="/user-profile/{{ activity.id_host._id }}">{{ activity.id_host.first_name }}  {{ activity.id_host.last_name }}</a></p>
+       
         <div class="buttons"> 
         <a class="btn btn-dark"  role="button" *ngIf="this.currentUser.id === this.activity.id_host._id" (click)="openModal(template); showCategories()">Mise à jour</a>
         <div class="divider"></div>
         <a class="btn btn-danger"  role="button" *ngIf="this.currentUser.id === this.activity.id_host._id" (click)="deleteActivity()">Supprimer</a>
-        <a class="btn btn-primary"  role="button"  *ngIf="this.participants.length &lt; this.activity.participants_quantity && this.currentUser.id != this.activity.id_host._id" (click)="participateInActivity()">S'inscrire</a>
+        <a class="btn btn-primary"  role="button"  *ngIf="this.participants.length &lt; this.activity.participants_quantity && this.currentUser.id != this.activity.id_host._id" (click)="reloadPage(); participateInActivity(); ">S'inscrire</a>
         </div> 
       </div>
     </div>
