--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -64,7 +64,7 @@
       </form>
   
       <div class="alert alert-success" *ngIf="isLoggedIn">
-        Connecté comme 
+        Vous êtes connecté 
       </div>
     </div>
   </div>
